Closed Bug 1644976 Opened 5 years ago Closed 5 years ago

wasmDis double-spaces its output on ARM

Categories

(Core :: JavaScript: WebAssembly, defect, P3)

ARM
All
defect

Tracking

()

RESOLVED FIXED
mozilla80
Tracking Status
firefox80 --- fixed

People

(Reporter: lth, Assigned: asobeh, Mentored)

Details

(Keywords: good-first-bug)

Attachments

(1 file, 1 obsolete file)

I have a test case, which I'm not going to share, where I disassemble a function with wasmDis, and I see this in the console:

0x4c500000  e52de004  e52de004       str lr, [sp, #-4]!

0x4c500004  e52d9004  e52d9004       str r9, [sp, #-4]!

0x4c500008  e52db004  e52db004       str fp, [sp, #-4]!

0x4c50000c  e1a0b00d  e1a0b00d       mov fp, sp

0x4c500010  e3560003  e3560003       cmp r6, #3

0x4c500014  0a000005  0a000005       beq +28 -> 0x4c500030

0x4c500018  e7f000f0  e7f000f0       constant pool begin (length 0)

0x4c50001c  e320f000  e320f000       nop

On other platforms the output is single-spaced (ie no blank line between every output line), as it should be. We want that here too.

Assignee: nobody → asobeh
Attachment #9159326 - Attachment is obsolete: true
Pushed by rhunt@eqrion.net: https://hg.mozilla.org/integration/autoland/rev/60b35af4c19a wasmDis double-spaces its output on ARM. *adjusted r=rhunt
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: