Bug 1644976 wasmDis double-spaces its output on ARM. *adjusted r=rhunt

Differential Revision: https://phabricator.services.mozilla.com/D81316