js/src/jit/Disassemble.cpp
@@ -81,8 +81,8 @@ void Disassemble(uint8_t* code, size_t length, InstrCallback callback) {
     uint8_t* next_instr = instr + d.InstructionDecode(buffer, instr);
 
     JS::UniqueChars formatted =
-        JS_smprintf("0x%p  %08x  %s\n", instr,
-                    *reinterpret_cast<int32_t*>(instr), buffer.start());
+        JS_smprintf("0x%p  %08x  %s", instr, *reinterpret_cast<int32_t*>(instr),
+                    buffer.start());
     callback(formatted.get());
 
     instr = next_instr;
